DigiliansApp-byKubernetes/C1-db_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
